--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,93 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  margin   : 0;
+  padding  : 0;
+  height   : 100%;
+  width    : 100%;
+  overflow : hidden;
+}
+
+.h100 {
+  height : 100%;
+}
+
+.w100 {
+  width : 100%;
+}
+
+.no-margin-padding {
+  margin  : 0;
+  padding : 0;
+}
+
+.no-margin {
+  margin : 0;
+}
+
+.no-padding {
+  padding : 0;
+}
+
+.scroll-h {
+  overflow-y : auto;
+}
+
+.scroll-v {
+  overflow-x : auto;
+}
+
+.flex-row {
+  display        : flex;
+  flex-direction : row;
+}
+
+.flex-row-reverse {
+  display        : flex;
+  flex-direction : row-reverse;
+}
+
+.flex-col {
+  display        : flex;
+  flex-direction : column;
+}
+
+.flex-col-reverse {
+  display        : flex;
+  flex-direction : column-reverse;
+}
+
+.f1 {
+  flex : 1;
+}
+
+.f2 {
+  flex : 2;
+}
+
+.f3 {
+  flex : 3;
+}
+
+.f1-20 {
+  flex : 1 1 20%;
+}
+
+.f1-30 {
+  flex : 1 1 30%;
+}
+
+.f1-50 {
+  flex : 1 1 50%;
+}
+
+.f1-70 {
+  flex : 1 1 70%;
+}
+
+.f-shrink-0 {
+  flex-shrink : 0;
+}
+
+.f-grow-0 {
+  flex-grow : 0;
+}
+
