--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,11 +4,37 @@
     <div></div>
   </div>
   <div id="navbar-bottom" class="content flex-row">
-    <div class="flex-row flex-center-child font-upper font-14 btn-action">dashboard</div>
-    <div class="flex-row flex-center-child font-upper font-14 btn-action">plan</div>
-    <div class="flex-row flex-center-child font-upper font-14 btn-action">work</div>
-    <div class="flex-row flex-center-child font-upper font-14 btn-action">team</div>
-    <div class="flex-row flex-center-child font-upper font-14 btn-action">project</div>
-    <div class="flex-row flex-center-child font-upper font-14 btn-action">product</div>
+
+    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+         [routerLinkActive]="'active-link'"
+         [routerLinkActiveOptions]="{exact:true}"
+         routerLink="/">dashboard
+    </div>
+
+    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+         [routerLinkActive]="'active-link'"
+         routerLink="/plan">plan
+    </div>
+
+    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+         [routerLinkActive]="'active-link'"
+         routerLink="/work">work
+    </div>
+
+    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+         [routerLinkActive]="'active-link'"
+         routerLink="/team">team
+    </div>
+
+    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+         [routerLinkActive]="'active-link'"
+         routerLink="/project">project
+    </div>
+
+    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+         [routerLinkActive]="'active-link'"
+         routerLink="/product">product
+    </div>
+
   </div>
 </div>
