--- a/src/styles.css
+++ b/src/styles.css
@@ -150,7 +150,7 @@ h1, h2, h3, h4, h5, h6, p, div {
   cursor : pointer;
 }
 
-.btn-action:hover {
+.btn-action:hover, .active-link {
   background    : blueviolet;
   color         : white;
   border-radius : 4px;
