--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,33 +5,33 @@
   </div>
   <div id="navbar-bottom" class="content flex-row">
 
-    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+    <div class="flex-row flex-center-child font-upper font-14 btn btn-action"
          [routerLinkActive]="'active-link'"
          [routerLinkActiveOptions]="{exact:true}"
          routerLink="/">dashboard
     </div>
 
-    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+    <div class="flex-row flex-center-child font-upper font-14 btn btn-action"
          [routerLinkActive]="'active-link'"
          routerLink="/plan">plan
     </div>
 
-    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+    <div class="flex-row flex-center-child font-upper font-14 btn btn-action"
          [routerLinkActive]="'active-link'"
          routerLink="/work">work
     </div>
 
-    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+    <div class="flex-row flex-center-child font-upper font-14 btn btn-action"
          [routerLinkActive]="'active-link'"
          routerLink="/team">team
     </div>
 
-    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+    <div class="flex-row flex-center-child font-upper font-14 btn btn-action"
          [routerLinkActive]="'active-link'"
          routerLink="/project">project
     </div>
 
-    <div class="flex-row flex-center-child font-upper font-14 btn-action"
+    <div class="flex-row flex-center-child font-upper font-14 btn btn-action"
          [routerLinkActive]="'active-link'"
          routerLink="/product">product
     </div>
