--- a/src/app/home/team/team.component.css
+++ b/src/app/home/team/team.component.css
@@ -1,3 +1,8 @@
+#add-team > h1 {
+  margin    : 0;
+  font-size : 80px;
+}
+
 .team-content {
   flex-wrap       : wrap;
   justify-content : space-evenly;
@@ -6,6 +11,6 @@
 .team-card {
   flex-basis  : 30%;
   flex-shrink : 0;
-  height      : 200px;
+  min-height  : 200px;
   min-width   : 200px;
 }
