--- a/src/app/home/team/team.component.html
+++ b/src/app/home/team/team.component.html
@@ -1,6 +1,5 @@
 <div class="content padd-10-tb flex-row team-content">
-  <div class="card team-card flex-col btn-action flex-center-child"
-       id="add-team"
+  <div class="card team-card flex-col btn-action btn-add"
        (click)="onNewTeamClick()">
     <h1>+</h1>
   </div>
