--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,12 @@ h1, h2, h3, h4, h5, h6, p, div {
   text-align : center;
 }
 
+.para {
+  text-align    : justify;
+  padding-left  : 5px;
+  padding-right : 5px;
+}
+
 .flex-row {
   display        : flex;
   flex-direction : row;
@@ -94,8 +100,8 @@ h1, h2, h3, h4, h5, h6, p, div {
 }
 
 .flex-center-child {
-  align-items     : center;
   justify-content : center;
+  align-items     : center;
 }
 
 .f1 {
@@ -177,6 +183,16 @@ h1, h2, h3, h4, h5, h6, p, div {
 
 .i-flex {
   display : inline-flex;
+}
+
+.btn-add {
+  justify-content : center;
+  align-items     : center;
+}
+
+.btn-add > h1 {
+  margin    : 0;
+  font-size : 80px;
 }
 
 /* Large desktop */
