--- a/src/styles.css
+++ b/src/styles.css
@@ -240,3 +240,13 @@ h1, h2, h3, h4, h5, h6, p, div {
     margin : 0 auto;
   }
 }
+
+.noselect {
+  -webkit-touch-callout : none; /* iOS Safari */
+  -webkit-user-select   : none; /* Safari */
+  -khtml-user-select    : none; /* Konqueror HTML */
+  -moz-user-select      : none; /* Firefox */
+  -ms-user-select       : none; /* Internet Explorer/Edge */
+  user-select           : none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
