--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="flex-col h100 scroll-v">
-  <app-nav class="w100"></app-nav>
+  <app-nav class="w100" style="z-index: 4"></app-nav>
   <router-outlet></router-outlet>
 </div>
