--- a/src/app/home/plan/plan.component.html
+++ b/src/app/home/plan/plan.component.html
@@ -1,14 +1,16 @@
-<div class="content plan-content h100">
+<div class="content plan-content" style="height: calc(100vh - 100px);">
   <div class="flex-row">
-    <div class="f1-50 center-text btn-action" (click)="selected=1;">
-      <h3 [ngClass]="{'selected-tab':selected==1}" class="font-upper">Stories</h3></div>
-    <div class="f1-50 center-text btn-action" (click)="selected=2;">
-      <h3 [ngClass]="{'selected-tab':selected==2}" class="font-upper">Sprints</h3></div>
+    <div class="f1-50 center-text btn-action bg-dfdfdf" (click)="selected=1;"
+         [ngClass]="{'selected-tab':selected==1}">
+      <h3 class="font-upper">Stories</h3></div>
+    <div class="f1-50 center-text btn-action bg-dfdfdf" (click)="selected=2;"
+         [ngClass]="{'selected-tab':selected==2}">
+      <h3 class="font-upper">Sprints</h3></div>
   </div>
-  <div class="w100 h100" *ngIf="selected==1">
+  <div class="w100 padd-10-tb" *ngIf="selected==1">
     <app-plan-story></app-plan-story>
   </div>
-  <div class="w100 h100" *ngIf="selected==2">
+  <div class="w100 padd-10-tb" *ngIf="selected==2">
     <app-plan-sprint></app-plan-sprint>
   </div>
 </div>
