--- a/src/styles.css
+++ b/src/styles.css
@@ -203,6 +203,14 @@ h1, h2, h3, h4, h5, h6, p, div {
   font-size : 80px;
 }
 
+.dialog{
+  /*background-color: #ffffff;*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); z-index: 10;
+}
+
 /* Large desktop */
 @media (min-width : 1200px) {
   .content {
