plan story creation

--- a/src/app/home/plan/plan-story/create-story/create-story.component.html
+++ b/src/app/home/plan/plan-story/create-story/create-story.component.html
@@ -5,5 +5,5 @@
   <h3 class="center-text">{{selectedBacklog.name}}</h3>
   <p class="para font-12">{{selectedBacklog.desc}}</p>
   <hr width="95%">
-  <textarea style="min-height: 200px;">{{selectedBacklog.desc}}</textarea>
+  <textarea style="min-height: 200px;" [(ngModel)]="storyDesc">{{selectedBacklog.desc}}</textarea>
 </div>
