added users screen with query

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -23,6 +23,11 @@
 
     <div class="flex-row flex-center-child font-upper font-14 btn btn-action"
          [routerLinkActive]="'active-link'"
+         routerLink="/users">users
+    </div>
+
+    <div class="flex-row flex-center-child font-upper font-14 btn btn-action"
+         [routerLinkActive]="'active-link'"
          routerLink="/team">team
     </div>
 
