--- a/src/app/home/user/user.component.css
+++ b/src/app/home/user/user.component.css
@@ -1,27 +1,32 @@
 .user-add-card {
-  width      : 100%;
-  text-align : center;
+  width: 100%;
+  text-align: center;
 }
 
 .user-card {
-  height      : 80px;
-  width       : 100%;
-  align-items : center;
+  /*height      : 80px;*/
+  padding-top: 5px;
+  padding-bottom: 5px;
+  width: 100%;
+  align-items: center;
+  overflow: hidden;
+  flex-wrap: wrap;
 }
 
 .user-card-icon {
-  background-color : blueviolet;
-  width            : 70px;
-  height           : 70px;
-  border-radius    : 50%;
-  margin-right     : 10px;
-  margin-left      : 10px;
+  background-color: blueviolet;
+  width: 70px;
+  height: 70px;
+  min-width: 70px;
+  border-radius: 50%;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .text-ffffff {
-  color : #FFFFFF;
+  color: #ffffff;
 }
 
 .user-email {
-  margin-left : auto; margin-right : 10px;
+  margin-left: auto; margin-right: 10px;
 }
